Updating EHN1 H4ext plot

--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -86,7 +86,7 @@ the sharing of responsibilities.
 
 %\section{CERN prototype detector and charged particle beam test [$\sim$10 pages; {\color{red} Donna/Jarek}]}
 \section{Scientific Motivation and Measurement Program} % [$\sim$10 pages; {\color{red} Donna/Jarek}]}
-	\input{detbeamtest}
+%	\input{detbeamtest}
 	
 
 %\section{Single Phase LAr Detector [$\sim$10 pages; {\color{red} J. Stewart et al.}]}
