--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -50,12 +50,13 @@ The maximum electron drift time in the TPC is about 2.2 ms. So, to minimize pile
 \end{table}
 
 \subsection{EHN1 H4ext Beamline}
-The H4ext is an extension of the existing H4 beamline in Experimental Hall North 1 (EHN1).  To produce particles in the momentum range of interest, a 60-80 GeV/c pion beam from the T2 target is used to generate tertiary beams. The tertiary particles are momentum and charge-selected and transported down H4ext beamline to the experimental area. A conceptual layout of the H4ext beamline is shown in Figure~\ref{fig:H4extPrelim}.  In the Figure, the cryostat for this proposal is located at the lower right hand corner of the plot (in the H4 beam line). The cryostat in the H2 beam line is for the WA105 Collaboration.
+The H4ext is an extension of the existing H4 beamline in Experimental Hall North 1 (EHN1).  To produce particles in the momentum range of interest, a 60-80 GeV/c pion beam from the T2 target is used to generate tertiary beams. The tertiary particles are momentum and charge-selected and transported down H4ext beamline to the experimental area. A conceptual layout of the H4ext beamline is shown in Figure~\ref{fig:H4extPrelim}.  The top plot in Figure~\ref{fig:H4extPrelim} is the bird's eye view and the bottom plot is the side view of the beam line layout.
+%In the Figure, the cryostat for this proposal is located at the lower right hand corner of the plot (in the H4 beam line). The cryostat in the H2 beam line is for the WA105 Collaboration.
 
 \begin{figure}[h]
   \centering
-\includegraphics[scale=0.3]{figures/EHN1Ext_Prelim2.jpg}
-  \caption{A conceptual layout of the H4ext beamline. The liquid argon cryostat for this proposal is the rotated rectangular box in the lower right hand corner.  }
+\includegraphics[scale=0.62]{figures/EHN1_H4ext.pdf}
+  \caption{A conceptual layout of the H4ext beamline. The top plot is the bird's eye view and the bottom plot is the side view of the H4ext beam line. The liquid argon cryostat for this proposal is the rectangular box in the right hand corner of both plots.  }
   \label{fig:H4extPrelim}
 \end{figure}
 
