--- a/organ.tex
+++ b/organ.tex
@@ -50,26 +50,25 @@ There are currently one CTC,Thomas Kutter (LSU)  and a deputy, Greg Pawloski (Mi
 In order to effectively execute the tasks required for the CERN prototype detector and beam test several sub-groups have been created 
 and sub-group leaders have been appointed.
 
-{\bf Measurement Program + Analysis}   Their charge is: to develop a comprehensive and prioritized list of measurements required to evaluate detector performance and provide detector charged particle response as input into DUNE physics sensitivity studies (beam physics, nucleon decay, supernovae, atmospheric neutrinos).  And to perform simulation studies to quantitatively compare the relevance of various measurements.
+{\bf Measurement Program + Analysis :}   Their charge is to develop a comprehensive and prioritized list of measurements required to evaluate detector performance and provide detector charged particle response as input into DUNE physics sensitivity studies (beam physics, nucleon decay, supernovae, atmospheric neutrinos).  And to perform simulation studies to quantitatively compare the relevance of various measurements.
 The leaders are Donna Naples (Pittsburgh) and Jaroslaw Nowak (Lancaster).
  
  
-{\bf Beam} Their charge is: to work closely with the measurement group to identify ideal beam requirements, to work closely with the CERN beam group to develop realistic beam design to make relevant beam measurements, to evaluate and optimize possible beam injection points and beam orientations, to perform beam simulations and provide simulated beam spectra as input for detector response simulations, to identify required beam instrumentation for beam characterization, and to develop beam run plans.
+{\bf Beam :} Their charge is to work closely with the measurement group to identify ideal beam requirements, to work closely with the CERN beam group to develop realistic beam design to make relevant beam measurements, to evaluate and optimize possible beam injection points and beam orientations, to perform beam simulations and provide simulated beam spectra as input for detector response simulations, to identify required beam instrumentation for beam characterization, and to develop beam run plans.
 The  beam subgroup leader is Cheng-Ju Lin (LBNL).
 
 
-{\bf Calibration}  Their charge is:  to develop tools to calibrate the performance of the detector, to interface with the physics measurement group to prioritize different calibration measurements, and to interface with detector subcomponent working groups to identify all required calibration tools and their integration into the detector /cryostat design.
-The calibration sub-group leaders are Qiuguang Liu (LANL) [interim] and Michele Weber (Bern).
+{\bf Calibration :}  Their charge is to develop tools to calibrate the performance of the detector, to interface with the physics measurement group to prioritize different calibration measurements, and to interface with detector subcomponent working groups to identify all required calibration tools and their integration into the detector /cryostat design.
+The calibration sub-group leaders are Qiuguang Liu (LANL) [interim] and Michele Weber (Bern).\\
 
 
 The CERN prototype coordinators work closely with the DUNE technical coordinator and the DUNE far detector manager.
 %Direct communication with  DUNE spokespeople is important for any strategic issues.
-The CTC also coordinates closely with the CERN Neutrino Platform leader.\\
+The CTC also coordinates closely with the CERN Neutrino Platform leader.
 The leaders of the "measurement program + analysis" subgroup work closely with the DUNE physics and software tools working group leaders. The leader of the "beam" subgroup works closely with the relevant CERN beam-line group leader.
 
 The project work break down structure (WBS) for the CERN single phase prototype detector down to level 3 and along with contributing institutions is shown in table~\ref{tab:wbs}.
-
-
+%
 \begin{table}[h]
 \centering
 \begin{tabular}{|l l c|}
@@ -103,14 +102,15 @@ X.4.2 & Data analysis &  all  \\ \hline
 \caption{Work break down structure down to level 3.}
 \label{tab:wbs}
 \end{table}
+%
 Work on a MOU between the CERN nu-platform and DUNE describing responsibilities, listing institutions involved and defining deliverables has started. 
-
+%
 
 \subsection{Cost estimate}
-The total estimated cost of the cERN single phase LAr prototype detector is presented in table~\ref{tab:cost}.
-Cosy figures are informed by component production for the 35~t detector.
+The total estimated cost of the CERN single phase LAr prototype detector is presented in table~\ref{tab:cost}.
+Cost figures are informed by component production for the 35~t detector.
 
-\begin{table}[h]
+\begin{table}[h!]
 \centering
 \begin{tabular}{| l| l| c |}
 \hline
