--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -23,7 +23,7 @@
 %% draftwatermark causes infinite loop on SL6's ancient TeXLive
 %\usepackage[firstpage]{draftwatermark}
 \usepackage{lipsum}
-\usepackage{tikz}
+%\usepackage{tikz}
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -185,21 +185,9 @@ the sharing of responsibilities.
 %\SetWatermarkScale{5}
 
 
-\begin{abstract}
+%\begin{abstract}
 
-After a short introduction to the DUNE physics program we motivate the proposed single phase liquid argon detector engineering test and charged particle beam measurement program. A detailed motivation for the planned beam measurements is provided. The proposed
-single phase liquid argon detector design is described in detail. 
-The proposed single phase liquid argon detector described corresponds largely to the former LBNE detector design which has been adopted by the DUNE collaboration for the first 10~kt detector module at the far site.
-The detector will be placed inside a membrane cryostat which will be connected to a cryogenics systems for both of which we provide engineering details. 
-Furthermore we introduce and justify the anticipated calibration tools before 
-describing the required beam line and beam monitoring instrumentation for the project.
-Installation and computing plans are presented before
-the proposal concludes with a schedule, an overview of the organizational structure put in place to execute the plan and 
-the sharing of responsibilities.
-
-%analysis plans, 
-
-\end{abstract}
+%\end{abstract}
 
 \newpage
 \tableofcontents
@@ -209,7 +197,6 @@ the sharing of responsibilities.
 %\section{Introduction [$\sim$5 pages; {\color{red} Thomas/Greg/B.Wilson}]}
 \section{Introduction}
 	\input{introduction}
-%	\input{../150212_introduction_Greg}
 
 %\section{CERN prototype detector and charged particle beam test [$\sim$10 pages; {\color{red} Donna/Jarek}]}
 \section{Scientific Motivation and Measurement Program} % [$\sim$10 pages; {\color{red} Donna/Jarek}]}
@@ -250,5 +237,5 @@ the sharing of responsibilities.
 
 \input{bibliography}
 
+
 \end{document}
->>>>>>> 447cbe6d5c3edeea2c787cd9b18b4297f3aad2c3
