--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -24,7 +24,6 @@
 %\usepackage[firstpage]{draftwatermark}
 \usepackage{lipsum}
 \usepackage{tikz}
-%\usepackage{tikz}
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -48,7 +47,8 @@
 
 \date{\today}
 %\date{April 15, 2015}
-	\input{authors}
+%	\input{authors}
+	\input{authors_template}
 
 \maketitle
 
@@ -58,21 +58,12 @@
 %\SetWatermarkScale{5}
 
 
-\begin{abstract}
+%\begin{abstract}
 
-After a short introduction to the DUNE physics program we motivate the proposed single phase liquid argon detector engineering test and charged particle beam measurement program. A detailed motivation for the planned beam measurements is provided. The proposed
-single phase liquid argon detector design is described in detail. 
-The proposed single phase liquid argon detector described corresponds largely to the former LBNE detector design which has been adopted by the DUNE collaboration for the first 10~kt detector module at the far site.
-The detector will be placed inside a membrane cryostat which will be connected to a cryogenics systems for both of which we provide engineering details. 
-Furthermore we introduce and justify the anticipated calibration tools before 
-describing the required beam line and beam monitoring instrumentation for the project.
-Installation and computing plans are presented before
-the proposal concludes with a schedule, an overview of the organizational structure put in place to execute the plan and 
-the sharing of responsibilities.
+%\end{abstract}
 
-%analysis plans, 
-
-\end{abstract}
+% --- executive summary section ---
+%\input{execsum}
 
 \newpage
 \tableofcontents
