--- a/organ.tex
+++ b/organ.tex
@@ -114,22 +114,30 @@ Cost figures are informed by component production for the 35~t detector.
 \centering
 \begin{tabular}{| l| l| c |}
 \hline
-\textbf{no. } & \textbf{Item}  & \textbf{Cost [k USD]}  \\ \hline
+\textbf{no. } & \textbf{Item}  & \textbf{Cost [kUSD]}  \\ \hline
 1 & APAs & \\
 2 & CPA  & \\
-3 &PDS  & \\
-4 & & \\
-5 & & \\
-7 & & \\
-8 & & \\ \hline
+3 & PDS  & \\
+4 & field cage  & \\
+5 & TPC support & \\
+6 & power supplies & \\
+7 & Electronics & \\
+8 & DAQ & \\
+9 & computing & \\
+10 & cryostat & 2300 \\
+11 & cryogenics system & 1400 \\
+12 & clean room & \\
+13 & infrastructure & \\
+14 & installation \& logistics & \\
+15 & ... & \\ \hline
   & \textbf{Total } & \\ \hline
 \end{tabular}
-\caption{Detector component cost estimate.}
+\caption{Estimated cost for the single phase LAr detector.}
 \label{tab:cost}
 \end{table}
 
-%\subsection{Division of Responsibilities}
 
+%\subsection{Division of Responsibilities}
 
 %\subsubsection{Shared responsibilities}
 
