--- a/organ.tex
+++ b/organ.tex
@@ -37,7 +37,7 @@ A working group has been set up within the DUNE collaboration to coordinate all 
 The CERN prototype effort is coordinated by the "CERN Prototype Technical Coordinator (CTC)" \cite{LBNEorg}.
 %The charge of the CERN prototype Collaboration Technical Coordinator is defined as follows.
 The CERN prototype CTC is responsible for the following:
-\begin{enumerate}[i]
+\begin{enumerate}[i.]
 	\item Prioritize and maintain a schedule of collaboration activities regarding simulations and physics analysis. 
 	\item Prioritize and maintain a schedule of other collaboration service activities on the CERN prototype.  These activities may include collaboration participation in assembly, commissioning, calibration, debugging, data-taking, shifts, etc. 
 	\item The responsibility of the CERN prototype CTC shall include maintaining a database of contributions from the collaboration to the CERN detector and beam test prototyping.
