--- a/bibliography.tex
+++ b/bibliography.tex
@@ -10,6 +10,8 @@
 
 \bibitem{dunecdr} DUNE CDR -- ADD LINK HERE
 
+\bibitem{eoi} SPSC-EOI-011 
+
 \bibitem{CRubbia}"The Liquid-argon time projection chamber: a new concept for Neutrino Detector", C. Rubbia, CERN-EP/77-08 (1977).
 
 \bibitem{icarus_mainref} "Design, construction and tests of the ICARUS T600 detector", ICARUS Collaboration, Nucl. Inst. Meth., A527 (2004) 329-410. 
@@ -80,8 +82,7 @@ A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
 
 %\bibitem{conversio-eff}
 
-\bibitem{sensl} SensL SiPM reference
-
+\bibitem{sensl} SensL SiPM \url{http://sensl.com/products/silicon-photomultipliers/cseries/}
   %
   %cites from singlephasedet input: readout
   %
