some edits from Thomas

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -268,10 +268,10 @@ in Sec.~\ref{sec_other}.
 %algorithms. Kaon data will be needed to tune proton decay backgrounds .
 %Special runs at various angles with $\pi$, $\mu$, p and electrons will be performed to study reconstruction and tune PID algorithms. 
 
-\subsection{Detector performance tests}
+\subsection{Detector physics validation tests}
 
 The prototype detector will allow to study the detector response to charge particles from the test beam. The measured energy deposition for various particles and its dependence on the direction of the particle will be used to tune
-Monte Carlo simulations and allow more precise reconstruction of neutrino energy and interactions topologies with good particle identification.
+Monte Carlo simulations and allow improvements to reconstruction of neutrino energy and interaction topologies. % with good particle identification.
 
 
 \subsubsection{Shower calibration}
@@ -391,7 +391,7 @@ exclusive final state processes over the full relevant energy range and specific
  
 
 
-\subsubsection{Angular Dependence}
+\subsubsection{Angular dependence}
 
 \label{sec_angle}
 
@@ -425,8 +425,8 @@ Recent results from ArgoNeuT~\cite{argoneut_angle} find a small unmodeled
 angular dependence in a data sample obtained using stopping protons from 
 neutrino interactions in the range 50-300 MeV with angles in the range 40-90$^{\circ}$.
 
-Additional data covering a large angular range would be useful to further investigate this possibility.
-The large sample of 1~GeV protons requested will also be used to study angular dependence using 
+Additional data covering a large angular range would be useful to further investigate angular dependence.
+The large sample of 1~GeV protons requested will also be used to study this using 
 samples of secondary stopping protons produced in showers at a range of angles with
 respect to the field direction.
 
@@ -478,8 +478,8 @@ perform tests of PID algorithms and Bethe-Bloch calibration measurements.
 \includegraphics[width=0.53\textwidth,height=6.0cm]{figures/pids_new}
 \includegraphics[width=0.46\textwidth,height=6.0cm]{figures/prkpimu_new}
 %\includegraphics[width=\textwidth,height=5.0cm]{figures/pid_curves}
-  \caption{(left) ICARUS simulated track dQ/dx as a function of residual range for muons, pions, protons and kaons, used as training data in a neutral-net-based PID algorithm. (right) Distribution of dQ/dx for each particle type for a bin with residual range 
-6($\pm$1)~cm. The small difference between muon and pion PID is illustrated.
+  \caption{ICARUS simulated track dQ/dx as a function of residual range for muons, pions, protons and kaons, used as training data in a neutral-net-based PID algorithm (left). Distribution of dQ/dx for each particle type for a bin with residual range 
+6($\pm$1)~cm (right). The small difference between muon and pion PID is illustrated.
 }
 \label{fig:resrange}
 \end{figure}
