rm abstract, edits

--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -63,7 +63,9 @@
 %\end{abstract}
 
 % --- executive summary section ---
-%\input{execsum}
+\newpage
+\centerline{\textbf{\centerline{\bf{\Large {Executive Summary}}}}} 
+	\input{execsum}
 
 \newpage
 \tableofcontents
@@ -73,7 +75,6 @@
 %\section{Introduction [$\sim$5 pages; {\color{red} Thomas/Greg/B.Wilson}]}
 \section{Introduction}
 	\input{introduction}
-%	\input{../150212_introduction_Greg}
 
 %\section{CERN prototype detector and charged particle beam test [$\sim$10 pages; {\color{red} Donna/Jarek}]}
 \section{Scientific Motivation and Measurement Program} % [$\sim$10 pages; {\color{red} Donna/Jarek}]}
@@ -82,8 +83,6 @@
 
 %\section{Single Phase LAr Detector [$\sim$10 pages; {\color{red} J. Stewart et al.}]}
 \section{Single Phase LAr Detector} 
-%\rm
-
 	\input{singlephasedet}
 
 
